--- a/app/src/main/res/layout/row_second.xml
+++ b/app/src/main/res/layout/row_second.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-
-              android:padding="10dp"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/rowSecondText"
-        android:paddingLeft="28dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="28dp"
         android:textColor="@android:color/black"
-        android:textSize="18sp"/>
+        android:textSize="18sp" />
 </LinearLayout>
