--- a/app/src/main/res/layout/row_third.xml
+++ b/app/src/main/res/layout/row_third.xml
@@ -10,5 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="46dp"
+        android:textColor="@android:color/black"
         android:textSize="16sp" />
 </LinearLayout>
