DATA FROM JSON & Child Display Based on data

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
 
       android:id="@+id/expandible_listview"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"></ExpandableListView>
+      android:layout_height="match_parent"
+      android:groupIndicator="@null"/>
 
 </LinearLayout>
