DATA FROM JSON & Child Display Based on data

--- a/app/src/main/res/layout/row_first.xml
+++ b/app/src/main/res/layout/row_first.xml
@@ -13,4 +13,9 @@
         android:paddingLeft="24dp"
         android:textColor="?colorPrimary"
         android:textSize="20sp"/>
+
+<!--    <view
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/colorPrimaryDark"/>-->
 </LinearLayout>
