--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
       android:id="@+id/expandible_listview"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:groupIndicator="@null"/>
+      android:groupIndicator="@null"
+      android:divider="@null"/>
 
 </LinearLayout>
