--- a/app/src/main/res/layout/row_first.xml
+++ b/app/src/main/res/layout/row_first.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="4dp">
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="6dp">
 
     <TextView
 
@@ -11,11 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="24dp"
-        android:textColor="?colorPrimary"
+        android:textColor="@android:color/black"
         android:textSize="20sp"/>
 
-<!--    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/colorPrimaryDark"/>-->
+        android:background="@color/divider_color"/>
 </LinearLayout>
