--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:focusable="false">
 
   <com.murali.multilevel.ExpandableHeightListView
 
@@ -16,6 +17,8 @@
       android:layout_height="match_parent"
       android:groupIndicator="@null"
       android:divider="@null"
-      android:transcriptMode="alwaysScroll"/>
+      android:transcriptMode="alwaysScroll"
+      android:descendantFocusability="blocksDescendants"
+      android:nestedScrollingEnabled="true"/>
 
 </LinearLayout>
